--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,7 +31,7 @@ jobs:
           git checkout --orphan gh-pages
 
           git rm -rf .
-          cp -r ./path/to/your/build/* .
+          cp -r ../build/* .
 
           git add .
           git commit -m "Deploy to GitHub Pages by GitHub Actions"
