--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,16 +28,20 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
+          mkdir gh-pages-temp
+          cd gh-pages-temp
+          git init
           git checkout --orphan gh-pages
 
-          git rm -rf .
+          # Copy built files from the main directory to the temporary directory
           cp -r ../build/* .
 
           git add .
           git commit -m "Deploy to GitHub Pages by GitHub Actions"
 
-          git push -f origin gh-pages
+          # Push changes to the 'gh-pages' branch in the repository
+          git remote add origin-repo https://github.com/username/repositoryname.git
+          git push -f origin-repo gh-pages
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-
