--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,27 +28,20 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-
-          # Create a temporary directory
           mkdir gh-pages-temp
           cd gh-pages-temp
-
-          # Initialize a new Git repository
           git init
           git checkout --orphan gh-pages
 
           # Copy built files from the main directory to the temporary directory
           cp -r ../build/* .
 
-          # Stage changes and commit
           git add .
           git commit -m "Deploy to GitHub Pages by GitHub Actions"
 
-          # Set the remote URL with the GitHub token for authentication
-          git remote add origin-repo "https://${GITHUB_TOKEN}@github.com/username/repositoryname.git"
-
-          # Push changes to the 'gh-pages' branch
+          # Push changes to the 'gh-pages' branch in the repository
+          git remote add origin-repo https://github.com/username/repositoryname.git
           git push -f origin-repo gh-pages
 
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} 
