--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "teoahoo@gmail.com"
+          git config --global user.name "Dmitry"
           mkdir gh-pages-temp
           cd gh-pages-temp
           git init
