--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,23 +25,29 @@ jobs:
         run: yarn build
 
       - name: Deploy to GitHub Pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git config --global user.email "teoahoo@gmail.com"
-          git config --global user.name "Dmitry"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+          # Create a temporary directory
           mkdir gh-pages-temp
           cd gh-pages-temp
+
+          # Initialize a new Git repository
           git init
           git checkout --orphan gh-pages
 
           # Copy built files from the main directory to the temporary directory
           cp -r ../build/* .
 
+          # Stage changes and commit
           git add .
           git commit -m "Deploy to GitHub Pages by GitHub Actions"
 
-          # Push changes to the 'gh-pages' branch in the repository
-          git remote add origin-repo https://github.com/username/repositoryname.git
-          git push -f origin-repo gh-pages
+          # Set the GitHub token for authentication
+          git remote add origin-repo "https://github.com/lulzseq//netology-cloud-storage.git"
 
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} 
+          # Push changes to the 'gh-pages' branch
+          git push -f origin-repo gh-pages
