--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,4 +1,5 @@
-name: Deploy to GitHub Pages
+
+name: Build and deploy 
 
 on:
   push:
@@ -6,49 +7,25 @@ on:
       - master
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+      - name: Checkout 
+        uses: actions/checkout@master
         with:
-          node-version: '18'
+          persist-credentials: false
+          submodules: true
 
-      - name: Install dependencies
+      - name: Install 
         run: yarn install
 
-      - name: Build app
-        run: yarn build
-
-      - name: Deploy to GitHub Pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: Build 
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-
-          # Create a temporary directory
-          mkdir gh-pages-temp
-          cd gh-pages-temp
-
-          # Initialize a new Git repository
-          git init
-          git checkout --orphan gh-pages
-
-          # Copy built files from the main directory to the temporary directory
-          cp -r ../build/* .
-
-          # Stage changes and commit
-          git add .
-          git commit -m "Deploy to GitHub Pages by GitHub Actions"
-
-          # Configure Git with the GitHub token for authentication
-          git remote add origin-repo "https://github.com/lulzseq//netology-cloud-storage.git"
-          git remote set-url origin-repo "https://${GH_TOKEN}@github.com/lulzseq//netology-cloud-storage.git"
-
-          # Push changes to the 'gh-pages' branch
-          git push -f origin-repo gh-pages
+          yarn clean
+          yarn build
+      - name: Deploy to GH Pages 
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GH_TOKEN }}
+          publish_dir: build
